styles/app.scss
@import '../node_modules/node-bourbon/assets/stylesheets/bourbon';

/* variables */
$font: 'Avenir', 'Arial', sans-serif;
$radius: 4px;

/* colors - light side */
$light-bg-grey: #E0E6EC;
$dark-bg-grey: #262a2e;
$purple: #8091C6;
$green: #6BB6C4;
$white: #FFF;
$light-grey4: #E2E7EB;
$light-grey2: #3B424A;
$darkest-grey: #545E6B;
$icon-dark-grey: #75808F;
$icon-hover: #545E6B;
$icon-active: #7AB2EA;
$positive-green: #57C6B9;

/* colors - dark side*/
$black: #1A1D21;
$table-text: #96A6AD;
$table-text-hover: #E2E7EB;
$table-text-active: #6BB6C4;

/* animations */
@include keyframes(rotate-wheel) { 100% { @include transform(rotate(360deg)); }  }
@include keyframes(saved-inout) {
  from { @include transform(translateY(-3em)); }
  50% { @include transform(translateY(0)); }
  to { @include transform(translateY(-3em)); }
}
@include keyframes(editor-in) {
  to { opacity: 1; @include transform(translateX(0)); }
}

html, body {
    width: 100%;
    height: 100%;

    margin: 0;
    padding: 0;
    font-family: $font;
}
h1, h2, h3, h4, h5 {
  font-weight: 300;
}

.u-svgIcon {
  width: 20px;
  height: 20px;
  cursor: pointer;
  fill: #75808F;
  stroke: #75808F;
}
.OuterContainer {
  height: 100%;
}
.App {
  @include display(flex);
  height: 100%;
  overflow: hidden;
}
.App:before {
  content: '';
  position: fixed;
  background: black;
  top:0;
  left:0;
  width:100%;
  height:100%;
  z-index: 3;
  visibility: hidden;
  opacity: 0;
  @include transition(all 300ms ease);
}
.App.is-dimmed:before {
  visibility: visible;
  opacity: 0.3;
}

.MainContainer {
  @include flex(1);
  z-index: 2;
  background-color: $light-bg-grey;
  color: #E0E6EC;
}
.MainContainer-header {
  position: relative;
  padding: 1em 1em 1em 2em;
  overflow: hidden;
}
.MainContainer-footer {
  position: absolute;
  bottom: 1em;
  margin-left: 2em;
  color: $light-grey2;
  cursor: pointer;
}
.MainContainer-brand {
  font-size: 1em;
  font-weight: 800;
  margin-right: 1em;
}
.MainContainer-contact {
  color: $light-grey2;
  text-decoration: none;
  font-size: 0.9em;
  font-weight: 100;
  opacity: 0.7;
  @include transition(200ms opacity ease);

  &:hover {
    opacity: 1;
  }
}

.SettingsButton {
  float: right;
  cursor: pointer;

  & > svg {
    width: 25px;
    height: 25px;
    stroke: $icon-dark-grey;
    fill: transparent;
    @include transition(200ms stroke ease);
    pointer-events: none;
    
    @include animation(rotate-wheel 3s linear infinite);
    @include animation-play-state(paused);

  }
  &:hover > svg {
    stroke: $icon-hover;
    @include animation-play-state(running);
  }

  &:active > svg {
    stroke: $icon-active;
  }
}
.ChartSelector {
  overflow: hidden;
  width: 100%;
}
.ChartSelector-button {
  width: 50%;
  @include background-image(linear-gradient(28deg, #D9DEE5 0%, #E2E7EE 100%));
  border: 1px solid #B8C6D3;
  box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.50);
  padding: 1em;
  outline: none;
  cursor: pointer;
  @include user-select(none);

  &:first-child {
    border-radius: $radius 0px 0px $radius;
  }
  &:last-child {
    border-radius: 0px $radius $radius 0px;
  }
  &:hover {
    @include background-image(linear-gradient(28deg, #ECEEF1 0%, #DDE3EA 100%));
    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.30);
    & > svg{
      fill: #545E6B;
      stroke: #545E6B;
    }
  }
  &:active {
    @include background-image(linear-gradient(28deg, #E4E9EE 0%, #EAEEF2 100%));
    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.30);
    & > svg{
      fill: #4996E3;
      stroke: #4996E3;
    }
  }
}

.EditorContainer {
  height: 100%;
  width: 30%;
  min-width: 500px;

  background-color: $dark-bg-grey;
  color: #d9dfe2;
}

.EditorNav {
  height: 10%;
  min-height: 60px;
  @include display(flex);
  @include flex-direction(row);
  @include justify-content(center);
}

.EditorNav-list {
  list-style: none;
  cursor: pointer;
  padding: 0;
  @include user-select(none);
}

.EditorNav-elem {
  display: inline-block;
  padding: 4px 8px;
  font-size: 0.8em;
  color: $table-text;
  background: rgba(59,66,74,0.75);
  @include background-image(linear-gradient(-180deg, rgba(255,255,255,0.05) 0%, rgba(255,255,255,0.00) 100%));
  border: 1px solid rgba(26,29,33,0.75);
  box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.02);

  &:first-child {
    border-radius: $radius 0 0 $radius;
  }
  &:last-child {
    border-radius: 0 $radius $radius 0;
  }

  &:hover {
    color: #E2E7EB;
    background: #3B424A;
    @include background-image(linear-gradient(-180deg, rgba(255,255,255,0.05) 0%, rgba(255,255,255,0.00) 100%));
    border: 1px solid rgba(26,29,33,0.75);
    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.02);
  }
  &:active {
    color: $green;
    background: rgba(58,66,73,0.75);
    @include background-image(linear-gradient(-180deg, rgba(0,0,0,0.10) 0%, rgba(255,255,255,0.00) 100%));
    border: 1px solid rgba(26,29,33,0.75);
    box-shadow: inset 0px -1px 0px 0px rgba(255,255,255,0.02);
  }
}

.EditorNav-elem.is-selected {
  color: #191C1F;
  @include background-image(linear-gradient(-155deg, #6BB6C4 0%, #6B9AD3 100%));
  border: 1px solid rgba(26,29,33,0.75);
  box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.12);
}

.JsonEditor {
  width: 100%;
  height: 90%;
  overflow: scroll;
  opacity: 0;
  z-index: 1;
  @include transform(translateX(-1em));
  @include animation(editor-in 600ms cubic-bezier(0.215, 0.61, 0.355, 1) forwards);
}

/* custom theme for ace editor */
#editor.ace_editor {
  background-color: $dark-bg-grey;
}
#editor .ace_gutter {
  background-color: $dark-bg-grey;
}
#editor .ace_variable {
  color: $green;
}
#editor .ace_string {
  color: $purple;
}
#editor .ace_constant.ace_numeric {
  color: $light-grey4;
}
#editor .ace_gutter {
  color: $light-grey2;
}

.Chart {
  display: block;
  margin: 0 auto;
  margin-top: 50px;
}

.SettingsContainer {
  position: fixed;
  display: block;
  width: 250px;
  height: 270px;
  top: 2.9em;
  right: 1.7em;
  border-radius: $radius;
  background: $light-bg-grey;
  opacity: 0;
  z-index: 3;
  color: $icon-dark-grey;
  box-shadow: 0 8px 13px rgba(0,0,0,0.36),0 0 0 1px rgba(0,0,0,0.06);
  @include transition(300ms all cubic-bezier(0.34,1.61,0.7,1));
  @include transform(scale(0.7) translateY(-25%) translateX(25%));
}
.SettingsContainer.is-open {
  opacity: 1;
  @include transform(scale(1) translateY(0));
}
.SettingsContainer-content {
  @include display(flex);
  @include flex-direction(column);
  @include justify-content(space-between);
  @include align-items(center);
  position: relative;
  padding: 2em 2em;
}
.SettingsContainer-button {
  width: 100%;
  height: 46px;
  line-height: 46px;
  margin-top: 2em;
  padding: 0;
  outline: none;
  cursor: pointer;
  border-radius: $radius;
  font-size: 1em;
  font-family: $font;
  text-decoration: none;
  text-align: center;
  box-sizing: border-box;
  @include user-select(none);
}
.SettingsContainer-button--default {
  @include background-image(linear-gradient(28deg, #D9DEE5 0%, #E2E7EE 100%));
  border: 1px solid #B8C6D3;
  box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.50);
  color: $icon-dark-grey;
  &:hover {
    @include background-image(linear-gradient(28deg, #ECEEF1 0%, #DDE3EA 100%));
    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.30);
    color: #545E6B;
  }
  &:active {
    @include background-image(linear-gradient(28deg, #E4E9EE 0%, #EAEEF2 100%));
    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.30);
    color: #4996E3;
  }
}
.SettingsContainer-button--blue {
  @include background-image(linear-gradient(-155deg, #58ACD9 0%, #7BA8FF 100%));
  border: 1px solid #719BEC;
  box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.15);
  color: #FFFFFF;
  &:hover {
    @include background-image(linear-gradient(-155deg, #58ACD9 0%, #7BA8FF 50%));
    box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,0.12);
  }
  &:active {
    @include background-image(linear-gradient(24deg, #58ACD9 0%, #7BA8FF 100%));
    box-shadow: inset 0px -1px 0px 0px rgba(255,255,255,0.12);
  }
}

.FlashMessage {
  color: $darkest-grey;
  float: left;
  @include transform(translateY(-3em));

  &.is-visible {
    @include animation(saved-inout 4s cubic-bezier(0.86, 0, 0.07, 1) 0.2s forwards);
  }
}

.ExcelEditor {
  width: 100%;
  height: 90%;
  display: block;
  overflow: scroll;
  z-index: 1;
  @include transform(translateX(1em));
  opacity: 0;
  @include animation(editor-in 600ms cubic-bezier(0.215, 0.61, 0.355, 1) forwards);
}
.ExcelEditor-controls {
  text-align: center;
  margin-top: 3em;
  margin-bottom: 2em;
  @include user-select(none);
  cursor: default;

  &:hover .ExcelEditor-control {
    color: $table-text-hover;
  }
}
.ExcelEditor-control {
  display: inline-block;
  color: $table-text;
  opacity: 0.6;
  margin: 0 1em;
  @include transition(300ms all ease);

  a {
    font-size: 1.1em;
    font-weight: 600;
    cursor: pointer;
  }
  a:first-child {
    margin-right: 0.4em;
  }
  a:last-child {
    margin-left: 0.4em;
  }
  a:active {
    color: $table-text-active;
  }
  span {
    font-size: 0.8em;
  }
}
.ExcelEditor-wrapper {
  display: block;
  text-align: center;
}
.ExcelEditor-table {
  margin: 0 auto;
  border-spacing: 0.5em;
  color: $table-text;

  thead th {
    font-weight: 300;
    font-size: 0.7em;
  }
}
.ExcelEditor-header {
  background: $black;
  min-width: 3.5em;
  border: 2px solid transparent;
  border-radius: $radius;
  outline: none;
  padding: 0.2em 0.7em;
  font-weight: 300;
  line-height: 1.4em;
  @include transition(200ms all ease);
  &:hover {
    color: $table-text-hover;
    border: 2px solid rgba(68, 79, 88, 50);
  }
  &:focus {
    color: $table-text-active;
    border: 2px solid $green;
  }
}
.ExcelEditor-cell {
  min-width: 3em;
  text-align: center;
  background: $black;
  border: 2px solid transparent;
  border-radius: $radius;
  outline: none;
  padding: 0.2em 0.7em;
  font-weight: 300;
  line-height: 1.4em;
  @include transition(200ms all ease);
  &:hover {
    color: $table-text-hover;
    border: 2px solid rgba(68, 79, 88, 50);
  }
  &:focus {
    color: $table-text-active;
    border: 2px solid $green;
  }
}

